--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1> Tic Tac Toe</h1>
     <buton class='button'>Clear Board</buton>
+    <h3 class='x'>Player X, your turn</h3>
     <div id='board'>
         <div class='row'>
             <div class='square'></div>
